[FEAT] get tables and columns
